# mustang-monitor

./: README.md  pyproject.toml
.github/workflows/: monitor.yml
config/: spec.yaml
mustang_monitor/: filter_rules.py  models.py  normalize.py  notify.py  run.py  score_ai.py  spec.py  state.py  vin.py
mustang_monitor/sources/: autoscout24.py  base.py  mobilede.py  olx.py  otomoto.py  willhaben.py
state/: monitor.db
tests/: test_filter_rules.py  test_models.py  test_normalize.py  test_notify.py  test_run.py  test_score_ai.py  test_sources.py  test_spec.py  test_state.py  test_vin.py
tests/fixtures/: mobilede_item.json  otomoto_item.json
