[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mustang-monitor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "PyYAML>=6.0",
    "apify-client>=3.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "responses>=0.25"]

[tool.setuptools.packages.find]
include = ["mustang_monitor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
